[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Prefab/M_Dock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/UI/Ground_Arc.png" type="Texture" id=2]
[ext_resource path="res://Assets/Prefab/M_Sections_Buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Screens/Home_screen.gd" type="Script" id=4]
[ext_resource path="res://Assets/Prefab/Star_Particals.tscn" type="PackedScene" id=5]

[node name="Home_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
Allah_Names = NodePath("ScrollContainer/VBoxContainer/HBoxContainer/Allah_Names")

[node name="Star_Particals2" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 359 )

[node name="Star_Particals" parent="." instance=ExtResource( 5 )]
position = Vector2( 785, 1625 )

[node name="Dock" parent="." instance=ExtResource( 1 )]

[node name="TextureRect" type="TextureRect" parent="Dock"]
show_behind_parent = true
anchor_right = 1.0
margin_top = -145.0
margin_bottom = 35.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.9
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1080.0
margin_bottom = 1000.0
size_flags_horizontal = 3
custom_constants/separation = 60
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 60
alignment = 1

[node name="Allah_Names" parent="ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 60.0
margin_right = 510.0
Title = "Allah Names"
Next_Scene_Path = "res://Assets/Screens/Names_Menu.tscn"

[node name="Icons2" parent="ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 570.0
margin_right = 1020.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 1080.0
margin_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 60
alignment = 1

[node name="Icons" parent="ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 60.0
margin_right = 510.0

[node name="Icons2" parent="ScrollContainer/VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 570.0
margin_right = 1020.0
